# XmlParser

./: CMakeLists.txt  README.md
lib/: .DatabaseManager.hpp.un~  DatabaseManager.hpp  XmlParser.hpp  XmlParser.hpp~
src/: DatabaseManager.cpp  DatabaseManager.cpp~  XmlParser.cpp  XmlParser.cpp~  main.cpp  main.cpp~  test.cpp~
xml_files/: StudentsList.xml~  menu.xml  st.xml  test.xml
